--- a/config.yml
+++ b/config.yml
@@ -3,7 +3,7 @@
      :region:    nyc3
      :size: 1gb
      :image: ubuntu-14-04-x64
-     :ssh_keys: 1520383
+     :ssh_123456
      :private_networking: true
  :admin:
   :token: PutTokenHerePleaseAndThankYou
